chore: adust swagger
